syntax = "proto3";

package loco.app.v1;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "domain/v1/domain.proto";

option go_package = "github.com/loco-team/loco/shared/proto/app/v1;appv1";

enum AppType {
  SERVICE = 0;
  DATABASE = 1;
  FUNCTION = 2;
  CACHE = 3;
  QUEUE = 4;
  BLOB = 5;
}

enum DeploymentPhase {
  PENDING = 0;
  RUNNING = 1;
  SUCCEEDED = 2;
  FAILED = 3;
  CANCELED = 4;
}

enum AppStatus {
  AVAILABLE = 0;
  PROGRESSING = 1;
  DEGRADED = 2;
  UNAVAILABLE = 3;
  IDLE = 4;
}

service AppService {
  // App CRUD
  rpc CreateApp(CreateAppRequest) returns (CreateAppResponse);
  rpc GetApp(GetAppRequest) returns (GetAppResponse);
  rpc GetAppByName(GetAppByNameRequest) returns (GetAppByNameResponse);
  rpc ListApps(ListAppsRequest) returns (ListAppsResponse);
  rpc UpdateApp(UpdateAppRequest) returns (UpdateAppResponse);
  rpc DeleteApp(DeleteAppRequest) returns (DeleteAppResponse);
  rpc GetAppStatus(GetAppStatusRequest) returns (GetAppStatusResponse);

  // Logs
  rpc StreamLogs(StreamLogsRequest) returns (stream LogEntry);

  // Events
  rpc GetEvents(GetEventsRequest) returns (GetEventsResponse);

  // App Operations
  rpc ScaleApp(ScaleAppRequest) returns (ScaleAppResponse);
  rpc UpdateAppEnv(UpdateAppEnvRequest) returns (UpdateAppEnvResponse);
}

message App {
  int64 id = 1;
  int64 workspace_id = 2;
  string name = 4;
  string namespace = 5;
  AppType type = 6;
  repeated loco.domain.v1.AppDomain domains = 7;
  int64 created_by = 11;
  google.protobuf.Timestamp created_at = 12;
  google.protobuf.Timestamp updated_at = 13;
  AppStatus status = 14;
}

// --- CRUD ---

message CreateAppRequest {
  int64 workspace_id = 1;
  string name = 3;
  AppType type = 4;
  loco.domain.v1.DomainInput domain = 5;
}

message CreateAppResponse {
  App app = 1;
  string message = 2;
}

message GetAppRequest {
  int64 app_id = 1;
}

message GetAppResponse {
  App app = 1;
}

message GetAppByNameRequest {
  int64 workspace_id = 1;
  string name = 2;
}

message GetAppByNameResponse {
  App app = 1;
}

message ListAppsRequest {
  int64 workspace_id = 1;
}

message ListAppsResponse {
  repeated App apps = 1;
}

message UpdateAppRequest {
  int64 app_id = 1;
  optional string name = 2;
  optional string subdomain = 3;
  optional string domain = 4;
}

message UpdateAppResponse {
  App app = 1;
  string message = 2;
}

message DeleteAppRequest {
  int64 app_id = 1;
}

message DeleteAppResponse {
  App app = 1;
  string message = 2;
}

message GetAppStatusRequest {
  int64 app_id = 1;
}

message DeploymentStatus {
  int64 id = 1;
  DeploymentPhase status = 2;
  int32 replicas = 3;
  optional string message = 4;
  optional string error_message = 5;
}

message GetAppStatusResponse {
  App app = 1;
  DeploymentStatus current_deployment = 2;
}

// --- Logs ---

message StreamLogsRequest {
  int64 app_id = 1;
  optional int32 limit = 2;
  optional bool follow = 3;
}

message LogEntry {
  string pod_name = 1;
  string namespace = 2;
  string container = 3;
  google.protobuf.Timestamp timestamp = 4;
  string log = 5;
  string level = 6;
}

// --- Events ---

message Event {
  google.protobuf.Timestamp timestamp = 1;
  string reason = 2;
  string message = 3;
  string type = 4;
  string pod_name = 5;
}

message GetEventsRequest {
  int64 app_id = 1;
  optional int32 limit = 2;
}

message GetEventsResponse {
  repeated Event events = 1;
}

// --- App Operations ---

message ScaleAppRequest {
  int64 app_id = 1;
  optional int32 replicas = 2;
  optional string cpu = 3;
  optional string memory = 4;
}

message ScaleAppResponse {
  DeploymentStatus deployment = 1;
}

message UpdateAppEnvRequest {
  int64 app_id = 1;
  map<string, string> env = 2;
}

message UpdateAppEnvResponse {
  DeploymentStatus deployment = 1;
}
